--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "strapi-utils": "3.1.3"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "A Strapi test"
   },
   "strapi": {
     "uuid": "35923091-a31f-4982-9033-a9ed7a7dc48c"
