--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "engines": {
     "node": ">=12.0.0",
-    "npm": ">=6.0.0"
+    "npm": ">=6.0.0",
+    "yarn": ">=1.22.0"
   },
   "license": "MIT"
 }
